--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/bankapi/protocol/openid-connect/certs
